Fixed CSS for pre on safari

--- a/static/css/posts.css
+++ b/static/css/posts.css
@@ -1,8 +1,7 @@
 pre {
     font-family: var(--bs-body-font-family);
     font-size: var(--bs-body-font-size);
-    word-wrap: normal;
-    overflow-wrap: normal;
+    white-space: pre-wrap;
 }
 
 pre img {
